# ext4-win

./: Cargo.toml  clippy.toml
.cargo/: config.toml
crates/ext4-core/: Cargo.toml
crates/ext4-core/src/: acl.rs  block.rs  checksum.rs  dir.rs  endian.rs  error.rs  extent.rs  fscrypt.rs  group.rs  inode.rs  journal.rs  lib.rs  memory.rs  name.rs  superblock.rs  tests.rs  verity.rs  volume.rs  windows.rs  xattr.rs
crates/ext4-core/src/disk/: block.rs  checksum.rs  endian.rs  io.rs  mod.rs
crates/ext4-core/src/disk_format/: acl.rs  dir.rs  extent.rs  group.rs  inode.rs  journal.rs  mod.rs  superblock.rs  xattr.rs
crates/ext4-core/src/error/: mod.rs
crates/ext4-core/src/platform/: mod.rs  name.rs  windows.rs
crates/ext4-core/src/protection/: fscrypt.rs  mod.rs  verity.rs
crates/ext4-core/src/tests/: bigalloc.rs  fixtures.rs  journal.rs  mod.rs  mount.rs  namespace.rs  protection.rs  read_write.rs  xattr_acl.rs
crates/ext4-core/src/volume/: block_group.rs  inode_record.rs  mod.rs  mount.rs  node.rs  read.rs  scope.rs
crates/ext4-core/src/volume/transaction/: allocation.rs  commit.rs  file_data.rs  mod.rs  namespace.rs  staging.rs  xattr.rs
crates/ext4-driver/: Cargo.toml  build.rs  ext4win.inx
crates/ext4-driver/native/: security_capture.c
crates/ext4-driver/src/: block_device.rs  cng.rs  create.rs  dispatch.rs  ea.rs  ffi.rs  file_info.rs  file_system_control.rs  fsctl.rs  irp.rs  lib.rs  memory.rs  metadata.rs  reparse.rs  security.rs  security_descriptor.rs  state.rs  status.rs  time.rs  volume_info.rs  wire.rs
crates/ext4-driver/src/irp/: capture.rs  executor.rs  mod.rs
crates/ext4-driver/src/kernel/: block_device.rs  cng.rs  fatal.rs  ffi.rs  mod.rs  status.rs  time.rs
crates/ext4-driver/src/request/: create.rs  dispatch.rs  ea.rs  file_info.rs  file_system_control.rs  fsctl.rs  metadata.rs  mod.rs  reparse.rs  security.rs  volume_info.rs
crates/ext4-driver/src/state/: mod.rs
crates/ext4-driver/src/wire/: mod.rs
src/: lib.rs
