[package]
name = "ext4-win"
version = "0.1.0"
edition = "2024"

[build-dependencies]
wdk-build = { git = "https://github.com/microsoft/windows-drivers-rs", branch = "main" }

[dependencies]
wdk       = { git = "https://github.com/microsoft/windows-drivers-rs", branch = "main" }
wdk-sys   = { git = "https://github.com/microsoft/windows-drivers-rs", branch = "main" }
wdk-alloc = { git = "https://github.com/microsoft/windows-drivers-rs", branch = "main" }
wdk-panic = { git = "https://github.com/microsoft/windows-drivers-rs", branch = "main" }
fs-ext4 = "0.3"

[lints.rust]
warnings = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
unconditional_panic = "deny"
unused_must_use = "deny"
unfulfilled_lint_expectations = "deny"
unknown_lints = "deny"
unsafe_op_in_unsafe_fn = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
missing_crate_level_docs = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
private_doc_tests = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"

[lints.clippy]
panic = "deny"
panic_in_result_fn = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
arithmetic_side_effects = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_docs_in_private_items = "warn"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
alloc_instead_of_core = "deny"
as_conversions = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
large_stack_frames = "deny"
large_stack_arrays = "deny"
bool_to_int_with_if = "deny"
undocumented_unsafe_blocks = "forbid"
multiple_unsafe_ops_per_block = "forbid"