[workspace]
members = [
    "crates/ext4-core",
    "crates/ext4-driver",
]
resolver = "3"

[workspace.dependencies]
wdk-build = { git = "https://github.com/microsoft/windows-drivers-rs", rev = "dc6fbf3c3f8696e00a399ac03e1968aaff1c5bb3" }
wdk-sys = { git = "https://github.com/microsoft/windows-drivers-rs", rev = "dc6fbf3c3f8696e00a399ac03e1968aaff1c5bb3" }
wdk-alloc = { git = "https://github.com/microsoft/windows-drivers-rs", rev = "dc6fbf3c3f8696e00a399ac03e1968aaff1c5bb3" }
wdk-panic = { git = "https://github.com/microsoft/windows-drivers-rs", rev = "dc6fbf3c3f8696e00a399ac03e1968aaff1c5bb3" }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
unconditional_panic = "deny"
unused_must_use = "deny"
unfulfilled_lint_expectations = "deny"
unknown_lints = "deny"
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
missing_crate_level_docs = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
private_doc_tests = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"

[workspace.lints.clippy]
panic = "deny"
panic_in_result_fn = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
arithmetic_side_effects = "deny"
missing_errors_doc = "forbid"
missing_panics_doc = "forbid"
missing_docs_in_private_items = "warn"
allow_attributes = "forbid"
allow_attributes_without_reason = "forbid"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
alloc_instead_of_core = "deny"
as_conversions = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
large_stack_frames = "deny"
large_stack_arrays = "deny"
bool_to_int_with_if = "deny"
undocumented_unsafe_blocks = "forbid"
multiple_unsafe_ops_per_block = "forbid"
