[package]
name = "ext4-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
aes = { version = "0.9", default-features = false }
cbc = { version = "0.2", default-features = false }
cts = { version = "0.7", default-features = false }
hkdf = { version = "0.13", default-features = false }
sha2 = { version = "0.11", default-features = false }
xts-mode = { version = "0.6", default-features = false }
zeroize = { version = "1.9", default-features = false, features = ["alloc"] }

[features]
default = []

[lints]
workspace = true
